--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -37,4 +37,9 @@
 		</div>
 		<div class="col-lg-2"></div>
 	</div>
+	<div class="row">
+		<div class="col-sm-5"></div>
+		<div class="col-sm-2"><%= paginate @products, class: "pagenate" %></div>
+		<div class="col-sm-5"></div>
+	</div>
 </div>
