--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,9 +79,8 @@
 
  /*// 共通レイアウト*/
 .message {
-  margin: 0 auto;
-  width: 800px;
-  font-size: 15px;
+  width: 100%;
+  font-size: 18px;
   padding-top: 20px;
   text-align: center;
 }
@@ -366,6 +365,7 @@
 .order_content_head {
   background-color: #eeeeee;
   height: 68px;
+  margin: 0 !important;
 }
 .order_content_1 {
   float: left;
@@ -590,6 +590,8 @@ header{
   font-size: 15px;
   margin-bottom: 15px;
   font-weight: bold;
+  text-align: center;
+
 }
 .ranking-image{
   width: 70%;
@@ -853,6 +855,7 @@ header{
 .genre-list {
   padding: 0;
   position: relative;
+  margin-bottom: 0 !important;
 }
 
 .genre-list .genre-list-item {
