--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,16 @@
 <div class="container-fulid">
+  <div class="row user_search">
+        <div class="col-lg-7"></div>
+        <div class="col-lg-5">
+          <div class="order_search">
+            <%= search_form_for @search, html: {class: 'form-inline'} do |f| %>
+            <%= f.label :order_number_cont, "購入番号検索" %>
+            <%= f.search_field :order_number_cont, class:'form-control', :size => '30' %>
+            <%= f.submit "検索" , class: 'btn btn-default btn-sm' %>
+          <% end %>
+          </div>
+        </div>
+      </div>
   <div class="row">
     <div class="col-lg-1">
      </div>
@@ -24,7 +36,7 @@
               <td class="order_index_td"><%= order.created_at.strftime('%Y/%m/%d %H:%M') %></td>
               <td class="order_index_td"><%= order.total_price.to_s(:delimited) %> 円</td>
               <td class="order_index_td"><%= order.status.shipment_status %></td>
-              <td class="order_index_td show_link_btn"><a href="" title="">詳細</a></td>
+              <td class="order_index_td show_link_btn"><%= link_to '詳細', user_order_path(order.user.id,order.id) %></a></td>
             </tr>
             <% end %>
           </tbody>
