--- a/app/views/users/registrations/confirm.html.erb
+++ b/app/views/users/registrations/confirm.html.erb
@@ -57,7 +57,7 @@
 
 </table>
 <div class="back_actions">
-    <%= link_to "編集ページに戻る",  '/users/sign_up/back' %>
+    <%= link_to "編集ページに戻る", new_user_registration_path %>
   </div>
 <div class="headline_box">
   <h2 class="Agreement_headline">利用規約</h2>
