--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -36,7 +36,7 @@
       </tr>
       <tr>
         <div class="field">
-          <td class="td_color"><%= f.label :郵便番号,class: "label_name" %><br />
+          <td class="td_color_pass"><%= f.label :郵便番号,class: "label_name" %><br />
           <div><em class="em_text">(ハイフン抜きで入力して下さい)</em></div></td>
           <td><%= f.text_field :postal %></td>
         </div>
