--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -174,7 +174,7 @@
   width: 628px;
   margin: 0 auto;
   text-align: center;
-  margin-bottom: 20px;
+
 }
 .kigou {
   float: left;
@@ -358,7 +358,6 @@
   margin: 0 auto;
   border: 1px solid;
   margin-bottom: 20px;
-  height: 188px;
 }
 .order_content img {
   margin: 10px 0 10px 10px;
@@ -370,25 +369,26 @@
 .order_content_1 {
   float: left;
   text-align: left;
-  width: 100px;
+  width: 130px;
   margin-right: 10px;
-  margin-left: 10px;
+  margin-left: 25px;
 }
 .order_content_3 {
   float: right;
-  width: 120px;
+  width: 150px;
   text-align: left;
   margin-right: 10px;
 }
 .order_content_2 {
   float: left;
-  width: 100px;
+  width: 130px;
   text-align: left;
   margin-right: 10px;
+  margin-left: 30px;
 }
 .order_content_4 {
   float: right;
-  width: 100px;
+  width: 170px;
   text-align: left;
   margin-right: 10px;
 }
@@ -400,17 +400,18 @@
 }
 
 .order_content_product {
-  width: 400px;
+  width: 450px;
   margin-left: 10px;
   text-align: left;
   float: left;
+  word-wrap: break-word;
 }
 .order_content_6 {
   display: inline-block;
   margin: 50px 0;
   padding-right: 10px;
   float: right;
-  width: 130px;
+
   text-align: left;
   font-size: 18px;
 }
@@ -423,6 +424,18 @@
   color: white;
   padding-left: 10px;
 
+}
+.td_user {
+  width: 167px;
+}
+.td_user_text {
+  width: 191px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.order_content_headline {
+  margin: 20px 0 30px 0;
 }
 
 /*以下　岡田*/
