ヘッダー、文字制限、noimege

--- a/app/views/products/top.html.erb
+++ b/app/views/products/top.html.erb
@@ -43,9 +43,9 @@
 			<%= link_to product_path(r), :style=>"text-decoration:none; color:black;" do %>
 			<div class="rankin-product">
 				<div class="ranking-integer"><%= "#{h(i + 1)}位" %></div>
-				<div class="ranking-image"><%= attachment_image_tag r, :image, :fill, 130, 130, format: 'jpeg' %></div>
-				<div class="ranking-artist-text"><%= r.artist.artist_name %></div>
-				<div class="ranking-product-text"><%= r.product_name %></div>
+				<div class="ranking-image"><%= attachment_image_tag r, :image, :fill, 130, 130, format: 'jpeg', fallback: 'no_image.jpg', :size => '130x130' %></div>
+				<div class="ranking-artist-text"><%= r.artist.artist_name.truncate(14) %></div>
+				<div class="ranking-product-text"><%= r.product_name.truncate(14) %></div>
 			</div>
 			<% end %>
 			<% end %>
@@ -57,9 +57,9 @@
 			<%= link_to product_path(t), :style=>"text-decoration: none; color:black;" do %>
 			<div class="rankin-product">
 				<div class="ranking-integer">発売日：<%= t.release %></div>
-				<div class="ranking-image"><%= attachment_image_tag t, :image, :fill, 130, 130, format: 'jpeg' %></div>
-				<div class="ranking-artist-text"><%= t.artist.artist_name %></div>
-				<div class="ranking-product-text"><%= t.product_name %></div>
+				<div class="ranking-image"><%= attachment_image_tag t, :image, :fill, 130, 130, format: 'jpeg', fallback: 'no_image.jpg', :size => '130x130' %></div>
+				<div class="ranking-artist-text"><%= t.artist.artist_name.truncate(14) %></div>
+				<div class="ranking-product-text"><%= t.product_name.truncate(14) %></div>
 			</div>
 			<% end %>
 			<% end %>
