--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -98,7 +98,8 @@
 				   投稿日：<%= review.created_at.strftime('%Y/%m/%d') %>
 				</div>
 				<div class="comment-box">
-					<div>
+					<div class="star-back">★★★★★</div>
+					<div class="star-position">
 						<% if review.star == 1 %>
 							<div class="star-color">★</div>
 						<% elsif review.star == 2 %>
@@ -111,8 +112,9 @@
 							<div class="star-color">★★★★★</div>
 						<% end %>
 					</div>
-					<div>
-						コメント：<%= review.comment %>
+
+					<div class="comment-position">
+						<%= review.comment %>
 					</div>
 				</div>
 				<div class="comment-delete">
@@ -158,9 +160,9 @@
 			<%= link_to product_path(t), :style=>"text-decoration: none; color:black;" do %>
 			<div class="rankin-product">
 
-				<div class="ranking-image"><%= attachment_image_tag t, :image, :fill, 130, 130, format: 'jpeg' %></div>
-				<div class="ranking-artist-text"><%= t.artist.artist_name %></div>
-				<div class="ranking-product-text"><%= t.product_name %></div>
+				<div class="ranking-image"><%= attachment_image_tag t, :image, :fill, 130, 130, format: 'jpeg', fallback: 'no_image.jpg', :size => '130x130' %></div>
+				<div class="ranking-artist-text"><%= t.artist.artist_name.truncate(14) %></div>
+				<div class="ranking-product-text"><%= t.product_name.truncate(14) %></div>
 			</div>
 			<% end %>
 			<% end %>
