--- a/app/views/contacts/question.html.erb
+++ b/app/views/contacts/question.html.erb
@@ -4,6 +4,7 @@
   	  <div class="col-lg-2"></div>
   	    <div class="col-lg-8">
 
+          <div class="question-box">
 	       <div class="question-h2">
             <h2>よくある質問　- Q&A-</h2>
           </div>
@@ -31,13 +32,13 @@
               <h4>Q.取り扱いアーティストの基準は？</h4>
             </div>
            <div class="answer">
-            A.ありません。ごめんなさい。
+            A.ありません。
           </div>
           <div class="question1">
               <h4>Q.1万円以上買ったら90%オフにできませんか？</h4>
             </div>
            <div class="answer">
-            A.できません。
+            A.勘弁してください。
           </div>
           <div class="question1">
               <h4>Q.スクエアミュージックで働きたいです。</h4>
@@ -45,17 +46,22 @@
            <div class="answer">
             A.履歴書を持って本社までお越しください。
           </div>
+          <div class="question1">
+                <h4>Q.私には９２歳の祖母がいるのですが、最近ボケ始めてしまい、会話がまともにできなくなってきました。以前はとても優しく穏やかで、小さい頃からお世話になっているので大好なのですが、もはやそんな面影もありません...。とても悲しいです。この悲しみはどうしたらいいでしょうか？お願いします。つらいので応えてください...。</h4>
+              </div>
+             <div class="answer">
+              A.愛のままにわがままに、僕は君だけを傷つけないように...。
+            </div>
+          </div>
+
           <div class="q-link">
             悩みが解決しない方はこちら⇨<%= link_to '問い合わせる',new_contact_path ,class: "btn btn-warning" %>
           </div>
           <div class="q-link">
             <%= link_to 'TOPへ戻る',root_path ,class: "btn btn-info" %>
-            </div>
-
-
-
+          </div>
 	     <div class="col-lg-2"></div>
-    </div>
-  </div>
-</div>
+     </div>
+   </div>
+　</div>
 </div>
