--- a/app/assets/stylesheets/contacts.scss
+++ b/app/assets/stylesheets/contacts.scss
@@ -35,4 +35,27 @@
 	border-left:solid 1px;
 	border-right:solid 1px;
 	border-bottom:solid 1px;
+border:solid 1px;
+	padding:5px;
+}
+.contact-index {
+	height:500px;
+	overflow: scroll;
+}
+.contact-user {
+	padding-top:5px;
+	font-size:20px;
+}
+.contact-type {
+	border-color: #808080;
+	padding:5px;
+	text-decoration: border;
+}
+.contact-content {
+	padding-bottom:10px;
+	border-bottom: solid 1px #808080;
+}
+.contact-delete {
+	padding-top:5px;
+	text-align: right;
 }
