--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,15 +18,13 @@
 	<!-- admin条件分岐 -->
 	<% if admin_signed_in? %>
 	<div class="header-links">
-<!-- 課題提出まで -->
-		<%= link_to cart_path(current_user.cart) do %><div class="link1">カートを確認</div><% end %>
-		<div class="link2"><%= link_to "マイページ", user_path(current_user.id), :style=>"color:white;" %></div>
-<!-- 課題提出までend -->
+		
 
 		<div class="link3"><%= link_to "USER一覧", users_path, :style=>"color:white;" %></div>
 		<div class="link2"><%= link_to "購入履歴一覧", orders_path, :style=>"color:white;" %></div>
 		<div class="link3"><%= link_to "登録商品一覧", products_path, :style=>"color:white;" %></div>
 		<div class="link2"><%= link_to "商品登録", new_product_path, :style=>"color:white;" %></div>
+		<div class="link3"><%= link_to "お問い合わせ一覧", contacts_path, :style=>"color:white;" %></div>
 		<div class="link3"><%= link_to "ログアウト", destroy_admin_session_path, method: :delete, :style=>"color:white;" %></div>
 	</div>
 	<div class="header-sub">
@@ -67,7 +65,7 @@
 
 	<% end %>
 <!-- 条件分岐終わり -->
-				<h1 class="header-text1"><a href="/" style="text-decoration: none;color: white">SQUARE MUSIC</a></h1>
+			<a href="/"><div class="header-logo"></div></a>
 			<div class="search-space">
 			<%= search_form_for @search, url: products_search_path  do |f| %>
 				<div>
@@ -79,8 +77,12 @@
 	</div>
 	</div>
 </header>
-
-
+<% flash.each do |name, msg| %>
+  <div class="alert alert-<%= name %>">
+    <a class="close" data-dismiss="alert">×</a>
+    <%= msg %>
+  </div>
+  <% end %>
 <% if notice %>
 　　<p class="message"><%= notice %></p>
 <% end %>
@@ -98,7 +100,6 @@
       </div>
         <div class="footer-link">
       	  <%= link_to "TOPへ" ,root_path ,:style=>"color:white;"%>
-      	｜<%= link_to "このサイトについて" ,about_path ,:style=>"color:white;"%>
       	｜<%= link_to "よくある質問" ,question_path ,:style=>"color:white;"%>
       	｜<%= link_to "お問い合わせ" ,new_contact_path ,:style=>"color:white;"%>
       </div>
