--- a/app/views/products/top.html.erb
+++ b/app/views/products/top.html.erb
@@ -1,22 +1,5 @@
-<!-- main部分 -->
-<div class="top-main">
-	<div class="sidebar-space"></div>
-	<div class="genre-box">
-		<div class="genre-title">
-			<p class="genre-title-text">カテゴリーで探す</p>
-		</div>
-		<ul class="genre-list">
-<!-- ジャンル検索 -->
+<%= render 'products/sidebar', genres: @genres %>
 
-			<% @genres.each do |genre| %>
-				<%=link_to genre_path(genre), :style=>"text-decoration: none;" do %>
-				<li class="genre-list-item">
-					<%= genre.genre_name %>
-				</li>
-				<% end %>
-			<% end %>
-		</ul>
-	</div>
 	<div class="top-box">
 		<div class="swipe-space">
 			<div class="sample sample01">
