--- a/app/assets/stylesheets/contacts.scss
+++ b/app/assets/stylesheets/contacts.scss
@@ -31,15 +31,14 @@
 }
 
 /*index*/
+.contact {
+	padding-bottom:50px;
+}
 .contact-box {
-	border-left:solid 1px;
-	border-right:solid 1px;
-	border-bottom:solid 1px;
-border:solid 1px;
 	padding:5px;
 }
 .contact-index {
-	height:500px;
+	height:400px;
 	overflow: scroll;
 }
 .contact-user {
