--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -57,5 +57,8 @@
     </div>
     <div class="col-lg-1">
     </div>
+    <div class="col-sm-5"></div>
+    <div class="col-sm-2"><%= paginate @users, class: "pagenate" %></div>
+    <div class="col-sm-5"></div>
   </div>
  </div>
