--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -45,5 +45,8 @@
     </div>
     <div class="col-lg-1">
     </div>
+    <div class="col-sm-5"></div>
+    <div class="col-sm-2"><%= paginate @orders, class: "pagenate" %></div>
+    <div class="col-sm-5"></div>
   </div>
 </div>
