--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <section class="signup_container">
+  <div class="sign_up_box">
   <div class="headline_box">
     <h2 class="signup_headline">会員登録</h2>
   </div>
@@ -85,4 +86,5 @@
     <% end %>
 
     <%= render "users/shared/links" %>
+  </div>
 </section>
