--- a/app/views/users/registrations/confirm.html.erb
+++ b/app/views/users/registrations/confirm.html.erb
@@ -1,4 +1,5 @@
 <div class="user_confirm_container">
+  <div class="user_confirm_box">
   <div class="headline_box">
     <h2 class="user_confirm_headline">登録情報確認</h2>
   </div>
@@ -15,6 +16,7 @@
     登録完了
   </div>
   </div>
+  <div class="user_confirm_table_box"> 
 <table class="user_confirm_table" border="1">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
@@ -56,6 +58,7 @@
   </tr>
 
 </table>
+</div>
 <div class="back_actions">
     <%= link_to "編集ページに戻る", new_user_registration_path %>
   </div>
@@ -140,5 +143,5 @@
 
 <% end %>
 
-
+</div>
 </div>
