--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -154,7 +154,7 @@
 
 			<% @same_genre.shuffle.first(5).each do |t| %>
 			<%= link_to product_path(t), :style=>"text-decoration: none; color:black;" do %>
-			<div class="rankin-product">
+			<div class="rankin-product2">
 
 				<div class="ranking-image"><%= attachment_image_tag t, :image, :fill, 130, 130, format: 'jpeg', fallback: 'no_image.jpg', :size => '130x130' %></div>
 				<div class="ranking-artist-text"><%= t.artist.artist_name.truncate(14) %></div>
