--- a/app/views/products/top.html.erb
+++ b/app/views/products/top.html.erb
@@ -25,7 +25,7 @@
 			<% @same_genre.order("order_item_count DESC").first(5).each_with_index do |r, i|%>
 			<%= link_to product_path(r), :style=>"text-decoration:none; color:black;" do %>
 			<div class="rankin-product">
-				<div class="ranking-integer"><%= "#{h(i + 1)}位" %></div>
+				<div class="ranking-integer2 ranking<%=i + 1%>"><%= "#{h(i + 1)}位" %></div>
 				<div class="ranking-image"><%= attachment_image_tag r, :image, :fill, 130, 130, format: 'jpeg', fallback: 'no_image.jpg', :size => '130x130' %></div>
 				<div class="ranking-artist-text"><%= r.artist.artist_name.truncate(14) %></div>
 				<div class="ranking-product-text"><%= r.product_name.truncate(14) %></div>
