--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -592,6 +592,7 @@ header{
 }
 .rankin-product{
   width: 19%;
+  height: 240px;
   float: left;
   margin: 2% 5px 20px 5px;
   position: relative;
@@ -609,13 +610,66 @@ header{
   border: 10px solid transparent;
   border-bottom-color: #f0f0f0;
 }
+.rankin-product2{
+  width: 19%;
+  height: 210px;
+  float: left;
+  margin: 2% 5px 20px 5px;
+  position: relative;
+  padding: 10px .75em 15px .75em;
+  background-color: #e8e8e8;
+}
+.rankin-product2::after {
+  content: '';
+  position: absolute;
+  top: -20px;
+  left: 0px;
+  width: -webkit-calc(100% 10px);
+  width: calc(100% - 0px);
+  height: 0;
+  border: 10px solid transparent;
+  border-bottom-color: #f0f0f0;
+}
 .ranking-integer{
-  height: 17px;
+  height: 22px;
   font-size: 15px;
   margin-bottom: 15px;
   font-weight: bold;
   text-align: center;
-
+}
+.ranking-integer2{
+  height: 22px;
+  font-size: 15px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  text-align: left;
+  padding-left: 10px;
+}
+.ranking1{
+  width: 45px;
+  background-color: gold;
+  background-image: -webkit-linear-gradient(transparent 0%,rgba(255,255,255,.3) 50%,transparent 50%,rgba(0,0,0,.1) 100%);
+  background-image:         linear-gradient(transparent 0%,rgba(255,255,255,.3) 50%,transparent 50%,rgba(0,0,0,.1) 100%);
+  box-shadow: 0 2px 2px 0 rgba(255,255,255,.2) inset,0 2px 10px 0 rgba(255,255,255,.5) inset,0 -2px 2px 0 rgba(0,0,0,.1) inset;
+  border: 1px solid rgba(0,0,0,.2);
+}
+.ranking2{
+  background-color: silver;
+  background-image: -webkit-linear-gradient(transparent 0%,rgba(255,255,255,.3) 50%,transparent 50%,rgba(0,0,0,.1) 100%);
+  background-image:         linear-gradient(transparent 0%,rgba(255,255,255,.3) 50%,transparent 50%,rgba(0,0,0,.1) 100%);
+  box-shadow: 0 2px 2px 0 rgba(255,255,255,.2) inset,0 2px 10px 0 rgba(255,255,255,.5) inset,0 -2px 2px 0 rgba(0,0,0,.1) inset;
+  border: 1px solid rgba(0,0,0,.2);
+  width: 45px;
+  height: 22px;
+}
+.ranking3{
+  background-color: #FF773E;
+  background-image: -webkit-linear-gradient(transparent 0%,rgba(255,255,255,.3) 50%,transparent 50%,rgba(0,0,0,.1) 100%);
+  background-image:         linear-gradient(transparent 0%,rgba(255,255,255,.3) 50%,transparent 50%,rgba(0,0,0,.1) 100%);
+  box-shadow: 0 2px 2px 0 rgba(255,255,255,.2) inset,0 2px 10px 0 rgba(255,255,255,.5) inset,0 -2px 2px 0 rgba(0,0,0,.1) inset;
+  border: 1px solid rgba(0,0,0,.2);
+  width: 45px;
+  height: 22px;
 }
 .ranking-image{
   width: 70%;
